--- a/app/assets/styles/css/font-awesome/brands.css
+++ b/app/assets/styles/css/font-awesome/brands.css
@@ -11,4 +11,6 @@
   src: url("../../fonts/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("../../fonts/fa-brands-400.woff2") format("woff2"), url("../../fonts/fa-brands-400.woff") format("woff"), url("../../fonts/fa-brands-400.ttf") format("truetype"), url("../../fonts/fa-brands-400.svg#fontawesome") format("svg"); }
 
 .fab {
-  font-family: 'Font Awesome 5 Brands'; }
+  font-family: 'Font Awesome 5 Brands'; 
+  font-weight: 400;
+}
