--- a/app/assets/styles/css/font-awesome/all.css
+++ b/app/assets/styles/css/font-awesome/all.css
@@ -15928,11 +15928,24 @@
     font-weight: 900;
     font-display: auto;
     src: url(../../fonts/fa-solid-900.eot);
-    src: url(.../../fonts/fa-solid-900.eot?#iefix) format("embedded-opentype"), url(../../fonts/fa-solid-900.woff2) format("woff2"), url(../../fonts/fa-solid-900.woff) format("woff"), url(../../fonts/fa-solid-900.ttf) format("truetype"), url(../../fonts/fa-solid-900.svg#fontawesome) format("svg")
+    src: url(../../fonts/fa-solid-900.eot?#iefix) format("embedded-opentype"), url(../../fonts/fa-solid-900.woff2) format("woff2"), url(../../fonts/fa-solid-900.woff) format("woff"), url(../../fonts/fa-solid-900.ttf) format("truetype"), url(../../fonts/fa-solid-900.svg#fontawesome) format("svg")
 }
 
 .fa,
 .fas {
     font-family: "Font Awesome 5 Pro";
     font-weight: 900
+}
+
+@font-face {
+    font-family: 'Font Awesome 5 Brands';
+    font-style: normal;
+    font-weight: normal;
+    font-display: auto;
+    src: url("../../fonts/fa-brands-400.eot");
+    src: url("../../fonts/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("../../fonts/fa-brands-400.woff2") format("woff2"), url("../../fonts/fa-brands-400.woff") format("woff"), url("../../fonts/fa-brands-400.ttf") format("truetype"), url("../../fonts/fa-brands-400.svg#fontawesome") format("svg"); }
+  
+.fab {
+    font-family: 'Font Awesome 5 Brands'; 
+    font-weight: 400;
 }
