--- a/app/assets/styles/css/font-awesome/all.css
+++ b/app/assets/styles/css/font-awesome/all.css
@@ -8911,8 +8911,8 @@
     font-style: normal;
     font-weight: normal;
     font-display: auto;
-    src: url(../../fonts/fa-brands-400.eot);
-    src: url(../../fonts/fa-brands-400.eot?#iefix) format("embedded-opentype"), url(../../fonts/fa-brands-400.woff2) format("woff2"), url(../../fonts/fa-brands-400.woff) format("woff"), url(../../fonts/fa-brands-400.ttf) format("truetype"), url(../../fonts/fa-brands-400.svg#fontawesome) format("svg")
+    src: url(../../../../fonts/fa-brands-400.eot);
+    src: url(../../../../fonts/fa-brands-400.eot?#iefix) format("embedded-opentype"), url(../../../../fonts/fa-brands-400.woff2) format("woff2"), url(../../../../fonts/fa-brands-400.woff) format("woff"), url(../../../../fonts/fa-brands-400.ttf) format("truetype"), url(../../../../fonts/fa-brands-400.svg#fontawesome) format("svg")
 }
 
 .fab {
@@ -8924,8 +8924,8 @@
     font-style: normal;
     font-weight: 900;
     font-display: auto;
-    src: url(../../fonts/fa-duotone-900.eot);
-    src: url(../../fonts/fa-duotone-900.eot?#iefix) format("embedded-opentype"), url(../../fonts/fa-duotone-900.woff2) format("woff2"), url(../../fonts/fa-duotone-900.woff) format("woff"), url(../../fonts/fa-duotone-900.ttf) format("truetype"), url(../../fonts/fa-duotone-900.svg#fontawesome) format("svg")
+    src: url(../../../../fonts/fa-duotone-900.eot);
+    src: url(../../../../fonts/fa-duotone-900.eot?#iefix) format("embedded-opentype"), url(../../../../fonts/fa-duotone-900.woff2) format("woff2"), url(../../../../fonts/fa-duotone-900.woff) format("woff"), url(../../../../fonts/fa-duotone-900.ttf) format("truetype"), url(../../../../fonts/fa-duotone-900.svg#fontawesome) format("svg")
 }
 
 .fad {
@@ -15896,8 +15896,8 @@
     font-style: normal;
     font-weight: 300;
     font-display: auto;
-    src: url(../../fonts/fa-light-300.eot);
-    src: url(../../fonts/fa-light-300.eot?#iefix) format("embedded-opentype"), url(../../fonts/fa-light-300.woff2) format("woff2"), url(../../fonts/fa-light-300.woff) format("woff"), url(../../fonts/fa-light-300.ttf) format("truetype"), url(../../fonts/fa-light-300.svg#fontawesome) format("svg")
+    src: url('../../../../fonts/fa-light-300.eot');
+    src: url('../../../../fonts/fa-light-300.eot?#iefix') format("embedded-opentype"), url('../../../../fonts/fa-light-300.woff2') format("woff2"), url(../../../../fonts/fa-light-300.woff) format("woff"), url('../../../../fonts/fa-light-300.ttf') format("truetype"), url(../../../../fonts/fa-light-300.svg#fontawesome) format("svg")
 }
 
 .fal {
@@ -15909,8 +15909,8 @@
     font-style: normal;
     font-weight: 400;
     font-display: auto;
-    src: url(../../fonts/fa-regular-400.eot);
-    src: url(../../fonts/fa-regular-400.eot?#iefix) format("embedded-opentype"), url(../../fonts/fa-regular-400.woff2) format("woff2"), url(../../fonts/fa-regular-400.woff) format("woff"), url(../../fonts/fa-regular-400.ttf) format("truetype"), url(../../fonts/fa-regular-400.svg#fontawesome) format("svg")
+    src: url('../../../../fonts/fa-regular-400.eot');
+    src: url('../../../../fonts/fa-regular-400.eot?#iefix') format("embedded-opentype"), url('../../../../fonts/fa-regular-400.woff2') format("woff2"), url(../../../../fonts/fa-regular-400.woff) format("woff"), url('../../../../fonts/fa-regular-400.ttf') format("truetype"), url(../../../../fonts/fa-regular-400.svg#fontawesome) format("svg");
 }
 
 .fal,
@@ -15927,8 +15927,8 @@
     font-style: normal;
     font-weight: 900;
     font-display: auto;
-    src: url(../../fonts/fa-solid-900.eot);
-    src: url(../../fonts/fa-solid-900.eot?#iefix) format("embedded-opentype"), url(../../fonts/fa-solid-900.woff2) format("woff2"), url(../../fonts/fa-solid-900.woff) format("woff"), url(../../fonts/fa-solid-900.ttf) format("truetype"), url(../../fonts/fa-solid-900.svg#fontawesome) format("svg")
+    src: url('../../../../fonts/fa-solid-900.eot');
+    src: url('../../../../fonts/fa-solid-900.eot?#iefix') format("embedded-opentype"), url(../../../../fonts/fa-solid-900.woff2) format("woff2"), url(../../../../fonts/fa-solid-900.woff) format("woff"), url('../../../../fonts/fa-solid-900.ttf') format("truetype"), url('../../../../fonts/fa-solid-900.svg#fontawesome') format("svg");
 }
 
 .fa,
@@ -15942,8 +15942,9 @@
     font-style: normal;
     font-weight: normal;
     font-display: auto;
-    src: url("../../fonts/fa-brands-400.eot");
-    src: url("../../fonts/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("../../fonts/fa-brands-400.woff2") format("woff2"), url("../../fonts/fa-brands-400.woff") format("woff"), url("../../fonts/fa-brands-400.ttf") format("truetype"), url("../../fonts/fa-brands-400.svg#fontawesome") format("svg"); }
+    src: url('../../../../fonts/fa-brands-400.eot');
+    src: url('../../../../fonts/fa-brands-400.eot?#iefix') format(embedded-opentype), url(../../../../fonts/fa-brands-400.woff2) format("woff2"), url(../../../../fonts/fa-brands-400.woff) format("woff"), url('../../../../fonts/fa-brands-400.ttf') format("truetype"), url(../../../../fonts/fa-brands-400.svg#fontawesome) format("svg"); 
+}
   
 .fab {
     font-family: 'Font Awesome 5 Brands'; 
