--- a/app/App_Resources/Android/src/main/res/values/styles.xml
+++ b/app/App_Resources/Android/src/main/res/values/styles.xml
@@ -20,6 +20,7 @@
 
     <!-- theme to use AFTER launch screen is loaded-->
     <style name="AppThemeBase" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:forceDarkAllowed">true</item>
         <item name="toolbarStyle">@style/NativeScriptToolbarStyle</item>
 
         <item name="colorPrimary">@color/ns_primary</item>
