Added 24p and 48 size classes

--- a/app/styles/MDMargins.scss
+++ b/app/styles/MDMargins.scss
@@ -69,6 +69,29 @@
   margin: 0 16;
 }
 
+// 24
+.m-24 {
+  margin: 24;
+ }
+.m-t-24 {
+  margin-top: 24;
+}
+.m-b-24 {
+  margin-bottom: 24;
+}
+.m-r-24 {
+  margin-right: 24;
+}
+.m-l-24 {
+  margin-left: 24;
+}
+.m-y-24 {
+  margin: 24 0;
+}
+.m-x-24 {
+  margin: 0 24;
+}
+
 // 32
 .m-32 {
   margin: 32;
@@ -90,6 +113,29 @@
 }
 .m-x-32 {
   margin: 0 32;
+}
+
+// 48
+.m-48 {
+  margin: 48;
+ }
+.m-t-48 {
+  margin-top: 48;
+}
+.m-b-48 {
+  margin-bottom: 48;
+}
+.m-r-48 {
+  margin-right: 48;
+}
+.m-l-48 {
+  margin-left: 48;
+}
+.m-y-48 {
+  margin: 48 0;
+}
+.m-x-48 {
+  margin: 0 48;
 }
 
 // 64
