--- a/app/styles/MDPaddings.scss
+++ b/app/styles/MDPaddings.scss
@@ -69,6 +69,29 @@
   padding: 0 16;
 }
 
+// 24
+.p-24 {
+  padding: 24;
+ }
+.p-t-24 {
+  padding-top: 24;
+}
+.p-b-24 {
+  padding-bottom: 24;
+}
+.p-r-24 {
+  padding-right: 24;
+}
+.p-l-24 {
+  padding-left: 24;
+}
+.p-y-24 {
+  padding: 24 0;
+}
+.p-x-24 {
+  padding: 0 24;
+}
+
 // 32
 .p-32 {
   padding: 32;
@@ -90,6 +113,29 @@
 }
 .p-x-32 {
   padding: 0 32;
+}
+
+// 48
+.p-48 {
+  padding: 48;
+ }
+.p-t-48 {
+  padding-top: 48;
+}
+.p-b-48 {
+  padding-bottom: 48;
+}
+.p-r-48 {
+  padding-right: 48;
+}
+.p-l-48 {
+  padding-left: 48;
+}
+.p-y-48 {
+  padding: 48 0;
+}
+.p-x-48 {
+  padding: 0 48;
 }
 
 // 64
