Removed fonticon plugin

--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -7,25 +7,11 @@
 @import "./styles/MDMargins";
 @import "./styles/MDPaddings";
 @import "./styles/MDFonts";
+@import "./styles/MDIcons";
 
 // Place any CSS rules you want to apply on both iOS and Android here.
 // This is where the vast majority of your CSS code goes.
 
-// Font icon class
-.fab {
-  font-family: "Font Awesome 5 Brands", "fa-brands-400";
-  font-weight: 400;
-}
-
-.fas {
-  font-family: "Font Awesome 5 Free", "fa-solid-900";
-  font-weight: 900;
-}
-
-.fa .far {
-  font-family: "Font Awesome 5 Free", "fa-regular-400";
-  font-weight: 400;
-}
 
 /*------ GENERAL ------*/
 Page {
