--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -7,7 +7,6 @@
 @import "./styles/MDMargins";
 @import "./styles/MDPaddings";
 @import "./styles/MDFonts";
-@import "./styles/MDIcons";
 
 // Place any CSS rules you want to apply on both iOS and Android here.
 // This is where the vast majority of your CSS code goes.
@@ -62,6 +61,11 @@ MDTextField {
   text-align: left;
   background-color: $surface;
   color: $onSurface;
+}
+
+#action-bar {
+  background-color: $primary;
+  color: $onPrimary;
 }
 
 .bottom-app-bar {
