Added more classes

--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -18,15 +18,15 @@ Page {
   color: $onBackground;
 }
 
-// StackLayout {
-//   background-color: $background;
-//   color: $onBackground;
-// }
+StackLayout {
+  background-color: $background;
+  color: $onBackground;
+}
 
-// GridLayout {
-//   background-color: $background;
-//   color: $onBackground;
-// }
+GridLayout {
+  background-color: $background;
+  color: $onBackground;
+}
 
 Label {
   background-color: $background;
