Changed some colors

--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -64,6 +64,6 @@ MDTextField {
 }
 
 .bottom-app-bar {
-  background-color: $primary-variant;
+  background-color: $primary;
   color: $onPrimary;
 }
