Added new units: 40 & 56 ps

--- a/app/styles/MDMargins.scss
+++ b/app/styles/MDMargins.scss
@@ -115,6 +115,29 @@
   margin: 0 32;
 }
 
+// 40
+.m-40 {
+  margin: 40;
+ }
+.m-t-40 {
+  margin-top: 40;
+}
+.m-b-40 {
+  margin-bottom: 40;
+}
+.m-r-40 {
+  margin-right: 40;
+}
+.m-l-40 {
+  margin-left: 40;
+}
+.m-y-40 {
+  margin: 40 0;
+}
+.m-x-40 {
+  margin: 0 32;
+}
+
 // 48
 .m-48 {
   margin: 48;
@@ -136,6 +159,29 @@
 }
 .m-x-48 {
   margin: 0 48;
+}
+
+// 56
+.m-56 {
+  margin: 56;
+ }
+.m-t-56 {
+  margin-top: 56;
+}
+.m-b-56 {
+  margin-bottom: 56;
+}
+.m-r-56 {
+  margin-right: 56;
+}
+.m-l-56 {
+  margin-left: 56;
+}
+.m-y-56 {
+  margin: 56 0;
+}
+.m-x-56 {
+  margin: 0 56;
 }
 
 // 64
@@ -160,4 +206,3 @@
 .m-x-64 {
   margin: 0 64;
 }
-
