--- a/app/styles/MDPaddings.scss
+++ b/app/styles/MDPaddings.scss
@@ -115,6 +115,29 @@
   padding: 0 32;
 }
 
+// 40
+.p-40 {
+  padding: 40;
+ }
+.p-t-40 {
+  padding-top: 40;
+}
+.p-b-40 {
+  padding-bottom: 40;
+}
+.p-r-40 {
+  padding-right: 40;
+}
+.p-l-40 {
+  padding-left: 40;
+}
+.p-y-40 {
+  padding: 40 0;
+}
+.p-x-40 {
+  padding: 0 40;
+}
+
 // 48
 .p-48 {
   padding: 48;
@@ -136,6 +159,29 @@
 }
 .p-x-48 {
   padding: 0 48;
+}
+
+// 56
+.p-56 {
+  padding: 56;
+ }
+.p-t-56 {
+  padding-top: 56;
+}
+.p-b-56 {
+  padding-bottom: 56;
+}
+.p-r-56 {
+  padding-right: 56;
+}
+.p-l-56 {
+  padding-left: 56;
+}
+.p-y-56 {
+  padding: 56 0;
+}
+.p-x-56 {
+  padding: 0 56;
 }
 
 // 64
